--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Deploy to server
         run: |
-          ssh -p 34873 root@5.161.42.171 << 'ENDSSH'
+          ssh -p 34873 -o "StrictHostKeyChecking no" root@5.161.42.171 << 'ENDSSH'
           cd /root/oam/oam-api
           git pull
           cp index.js /tmp/test
