--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Deploy to server
         run: |
+          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
           ssh -p 34873 -o "StrictHostKeyChecking no" root@5.161.42.171 << 'ENDSSH'
           cd /root/oam/oam-api
           git pull
